[project]
name = "comfy-plasma"
description = "Nodes: Plasma Noise, Random Noise, Greyscale Noise, Pink Noise, Brown Noise, Plasma KSampler"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Jordach/comfy-plasma"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfy-plasma"
Icon = ""
